Closed Bug 1524087 Opened 7 years ago Closed 7 years ago

raptor-webaudio-firefox regression from clang 8

Categories

(Core :: Web Audio, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: away, Assigned: away)

References

Details

Attachments

(1 file)

Continuing from bug 1522289 comment 4.

== Change summary for alert #18883 (as of Thu, 24 Jan 2019 13:10:20 GMT) ==

Regressions:

6% raptor-webaudio-firefox windows7-32 opt 209.67 -> 221.58
4% raptor-webaudio-firefox windows7-32 pgo 223.62 -> 232.67

For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=18883


The 4-6% overall regression understates the issue: one subtest (Periodic Wave with Automation) was regressing over 40%!

For some reason clang 7 was optimizing this pow(2., foo) to exp2(foo) and clang 8 stopped doing so: https://searchfox.org/mozilla-central/rev/78cd247b5d7a08832f87d786541d3e2204842e8e/dom/media/webaudio/OscillatorNode.cpp#174

I'll look into whether this was intentional from LLVM and potentially file a bug, but in the meantime, writing exp2 solves the regression.

Clang 7 was making the pow => exp2 optimization for us, and for some reason clang 8 stopped doing so. This resulted in a surprisingly large regression in raptor numbers.

Blocks: 1513237
Pushed by dmajor@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f7b03b3e66cb Use exp2 instead of pow in OscillatorNode r=padenot
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

The regressions seem to have been fixed. Will wait some extra data points, to properly confirm.

I confirm the fix! \0/

== Change summary for alert #19100 (as of Thu, 31 Jan 2019 13:22:46 GMT) ==

Improvements:

5% raptor-webaudio-firefox windows7-32 opt 222.50 -> 210.83
4% raptor-webaudio-firefox windows7-32 pgo 232.96 -> 223.33

For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=19100

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: