Bug 1524087 - Use exp2 instead of pow in OscillatorNode r=padenot

Clang 7 was making the pow => exp2 optimization for us, and for some reason clang 8 stopped doing so. This resulted in a surprisingly large regression in raptor numbers.

Differential Revision: https://phabricator.services.mozilla.com/D18148